fix issues related to chrX

--- a/doc/README
+++ b/doc/README
@@ -16,23 +16,23 @@ Before doing the classification, we should set the Outlier_GQ and Outlier_DP
 
 Then go to vcf_stat.py, change DP_THRESHOLD and GQ_THRESHOLD to Outlier_DP and Outlier_GQ given by the previous step, respectively.
 
-First, we need to calculate ths statistics from vcf file. **Note:**
+First, we need to calculate ths statistics from vcf file. It will output a file containing all statistics information for each variant. **Note:**
  - The vcf file should have the information of each individual. 
  - We don't have to merge all vcf files together.
  - If no discordant genotype file provided, the number of discordant genotype of all variants will be NA
  - If no pedigree file provided, the mendel errors of all variants will be NA
 
- python3 $YOUR_PATH/classifier/random_forest_classifier/stat.py -i [input_vcf] -o [output_filename] -p [ped_file(optional)] -d [discordant_genotype_file(optional)] -w [hwe_file(optional)]
+ python3 $YOUR_PATH/classifier/random_forest_classifier/stat.py -i [input_vcf] -o [output_filename] -p [ped_file(optional)] -d [discordant_genotype_file(optional)] -w [hwe_file(optional)] --dp [Outlier_DP] --gq [Outlier_GQ]
 
 You can check the usage of stat.py with
 
  python3 $YOUR_PATH/classifier/random_forest_classifier/stat.py -h
 
-Second, we need to divide the dataset into good, bad and grey variants. User can easily change the thresholds and output filename in the source. **Note that you don't have to merge the input file together**
+Second, we need to divide the dataset into good, bad and grey variants. User can easily change the thresholds and output filename in the source. The output files would be three: good.xx, bad.xx and grey.xx. **Note that you don't have to merge the input file together**
 
- python3 $YOUR_PATH/classifier/random_forest_classifier/data_preprocessing.py [input_file]
+ python3 $YOUR_PATH/classifier/random_forest_classifier/data_preprocessing.py [input_file] [output_filename_suffix (optional)]
 
-Third, we can train our random forest model and apply it on the classification. **Note that you need to merge all good variants into one file, all bad variants into one file and all grey variants into one file**
+Third, we can train our random forest model and apply it on the classification of grey variants. The output files would be predicted_good_xx and predictred_bad_xx. **Note that you need to merge all good variants into one file, all bad variants into one file and all grey variants into one file**
 
  python3 $YOUR_PATH/classifier/random_forest_classifier/classification.py [good_variants] [bad_variants] [grey_variants] [output_filename_suffix]
 
